umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_moleculelike_indigo_P-92_2_1_1_3_ex2.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 18
bond_count: 17
sum_formula: C11BrF4IO
graph6: QsGG_COG?@?AA??_?G?G??@??G?
