umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_moleculelike_indigo_all2000.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 422
bond_count: 344
sum_formula: C284H3AcAgAlAmArAsAtAuB2BaBeBiBkBrCaCdCeCfClCmCoCrCsCuDyErEsEuFFeFmFrGaGdGeHeHfHgHoIInIrKKrLaLiLrLuMdMgMnMoN11NaNbNdNeNiNoNpO9OsP4PaPbPdPmPoPrPtPuRaRbReRfRhRnRuS5SbScSeSiSmSnSrTaTbTcTeThTiTlTmUVW3XeYYbZnZr+2
graph6: ~?EehEGG__?G@O?O?A???G?@??C??G??G??C??A??@???O??A???G??A??????????@????C????O?C???????C????@?????G?????_????@?????A?????G?O?????C???????????G??????_?????@??_??????O????????????O??????A???????????????@????????_???????G????????????????C????????G???????G_????????G????????A?????????G?????????_????????A????????????????????_?????????G?????????@??????????G?????????A??????????C??????????????????????@???????????G???????????_??????????G???????????O????????????????????????G???????????@????????????C????????????G???????????AG????????????_????????????@????????????AG?????????????????????????G@?????????????_?????????????A_????????????A?????????????A??????????????????????????????G??????????????G??????????????C??????????????H???????????????????????????????_??????????????@???????????????@????????????????_??????????????AG??????????????O????????A?????????????????????????G?????????????????????????????????C????????????????@?????????????????G?????????????????_????????????????@?????????????????@??????????????????_?????????????????G?????????????????@??????????????????C??????????????????G??????????????????G??????????????????C??????????????????@?????????????????_?G??????????????????????????????????????@???????????????????@????????????????????_???????????????????G???????????????????P???????????????????@?????????????????????G????????????????????G?????????????????????????????????????????@?????????????????????G?????????????????????_????????????????????@?????????????????????R??????????????????????_?????????????????????_?????????????????????@??????????????????????S?????????????????????G???????????????????????G??????_??????????????@C?????????????????????o????????????????????????G?????????????????????_G_????????????????????C?????????????????????????@???????????????????????G_????????????????????????????????????????????A??H?????????????????????O??G????????????????????????G?????????????????????A??G????????????????????????_???????????????????????C@????????????????????????_G???????????????????????A?_????????????????????????@???????????????????????CO@??????????????????????????_??????????????????????A??G?????????????????????????I??????????????????????????C?????????????????????????@G?????????????????????????O??????????????????????????GC??????????????????????????P?????????????????????????G?_??????????????????????????C_????????????????????????????????????????????????????O?D?????????????????????????O?@????????????????????????????G???????????????????????@???@????????????????????????????C????????????????????????C???G???????????????????????????C?????????????????????????????C???????????????????????????G@?????????????????????????????G??????????????????????????A??_????????????????????????????@?????????????????????????????@???????????????????????????G?A_?????????????????????????????G??????????????????????????O??@???????A?????????????????????????????????????????????????????G??????????????????????????????O?????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????_??????????????????????????????@???????????????????????????????@???????????????????????????????@???????????????????????????????A????????????????????????????????_??????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????@??????????????????????????????????????????????????C??????????????????????????????????????????????????G??????????????????????????????????????????????????G??????????????????????????????????????????????????C??????????????????????????????????????????????????@??????????????????????????????????????????????????A????????????????????????????????????????????????????_??????????????????????????????????????????????????A???????????????????????????????????????????????????A????????????????????????????????????????????????????_???????????????????????????????????????????????????g?????????????????????????????????????????????????@????????????????????????????????????????????????????G????????????????????????????????????????????????????O????????????????????????????????????????????????????G????????????????????????????????????????????????????C??????????????????????????????????????????????????????G?????????????????????????????????????????????????????G?????????????????????????????????????????????????????_????????????????????????????????????????????????????@?????????????????????????????????????????????????????@??????????????????????????????????????????????????????_?????????????????????????????????????????????????????G?????????????????????????????????????????????????????@??????????????????????????????????????????????????????C??????????????????????????????????????????????????????G??????????????????????????????????????????????????????G??????????????????????????????????????????????????????C??????????????????????????????????????????????????????@???????????????????????????????????????????????????????G???????????????????????????????????????????????????????_??????????????????????????????????????????????????????@???????????????????????????????????????????????????????@????????????????????????????????????????????????????????_???????????????????????????????????????????????????????G???????????????????????????????????????????????????????@????????????????????????????????????????????????????????C????????????????????????????????????????????????????????G????????????????????????????????????????????????????????G????????????????????????????????????????????????????????C????????????????????????????????????????????????????????@?????????????????????????????????????????????????????????G?????????????????????????????????????????????????????????_????????????????????????????????????????????????????????@?????????????????????????????????????????????????????????@??????????????????????????????????????????????????????????_?????????????????????????????????????????????????????????G?????????????????????????????????????????????????????????@??????????????????????????????????????????????????????????C??????????????????????????????????????????????????????????G??????????????????????????????????????????????????????????G?????????????????????????????????????????????????????????????????????????????????????????????????????????????????????@???????????????????????????????????????????????????????????G???????????????????????????????????????????????????????????_??????????????????????????????????????????????????????????????????????????????????????????????????????????????????????@????????????????????????????????????????????????????????????_???????????????????????????????????????????????????????????G????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????C????????????????????????????????????????????????????????????G????????????????????????????????????????????????????????????G????????????????????????????????????????????????????????????C????????????????????????????????????????????????????????????@?????????????????????????????????????????????????????????????G???????????_?????????????????????????????????????????????????_????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????_?@???????????????????????????????????????????????????????????O?@??????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????O?@??????????????????????????????????????????????????????????????G?????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????W??????????????????????????????????????????????????????????????G??????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????W??????????????????????????????????????????????????????????????@???????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????B???????????????????????????????????????????????????????????@???@????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????@???@????????????????????????????????????????????????????????????????G????????????????????????????????????????????????????????????????G?????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????K????????????????????????????????????????????????????????????????A?????????????????????????????????????????????????????????????????G??????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????B?????????????????????????????????????????????????????????????????A??????????????????????????????????????????????????????????????????_???????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????B??????????????????????????????????????????????????????????????????G??????????????????????????????????????????????????????????????????G?????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????K??????????????????????????????????????????????????????????????????A???????????????????????????????????????????????????????????????????G??????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????B???????????????????????????????????????????????????????????????????A????????????????????????????????????????????????????????????????????_???????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????B????????????????????????????????????????????????????????????????????G????????????????????????????????????????????????????????????????????G?????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????K????????????????????????????????????????????????????????????????????A?????????????????????????????????????????????????????????????????????G??????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????B?????????????????????????????????????????????????????????????????????A????????????????????????????????????????????????????????????C?????????_
